--- a/src/TnDW/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "TnDWWebBundle::layout.html.twig" %}
 
+{% block selected %}home{% endblock %}
+
 {% block title %}
 home
 {% endblock %}
