--- a/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
@@ -1,5 +1,7 @@
 {% extends "TnDWWebBundle::layout.html.twig" %}
 
+{% block selected %}distros{% endblock %}
+
 {% block body %}
 <div id="distro" class="pagetitle">
 <h2>{{distro.name}}</h2>
