--- a/src/TnDW/WebBundle/Resources/views/Distros/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Distros/index.html.twig
@@ -1,6 +1,8 @@
 {# Distros page template #}
 {% extends "TnDWWebBundle::layout.html.twig" %}
 
+{% block selected %}distros{% endblock %}
+
 {% block body %}
 <div id="distro_select">
     <ul>
