--- a/src/TnDW/WebBundle/Resources/views/News/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/News/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "TnDWWebBundle::layout.html.twig" %}
 
+{% block selected %}news{% endblock %}
+
 {% block body %}
 <div class="pagetitle">
 	<h2>News</h2>
