--- a/src/TnDW/WebBundle/Resources/views/About/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/About/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "TnDWWebBundle::layout.html.twig" %}
 
+{% block selected %}about{% endblock %}
+
 {% block body %}
 <div class="pagetitle">
 	<h2>About</h2>
