--- a/src/TnDW/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Default/index.html.twig
@@ -1,12 +1,12 @@
 {% extends "TnDWWebBundle::layout.html.twig" %}
-
 {% block selected %}home{% endblock %}
 
 {% block title %}
-home
+The New Distrowatch
 {% endblock %}
 
 {% block body %}
+<div id="home">
 <div id="home-top">
 	<div id="home-top-title">
 		<h2>top rating</h2>
@@ -52,5 +52,7 @@ home
 		<p>user CD add a coment: <br /> something different than AB to discussion XY</p>
 		<p>user EF add a coment: <br /> i agree with... <br />  to discussion XY</p>
 	</div>
+</div>
+<div class="clear"></div>
 </div>
 {% endblock %}
