--- a/src/TnDW/WebBundle/Resources/views/About/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/About/index.html.twig
@@ -3,34 +3,25 @@
 {% block selected %}about{% endblock %}
 
 {% block body %}
-<div class="pagetitle">
-	<h2>About</h2>
-</div>
 <div id="about" class="text">
+	<h2>About</h2>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
-</div>
-<div class="pagetitle">
-	<h2>FAQ</h2>
-</div>
-<div id="about-faq" class="text">
+
+	<h3>FAQ</h3>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
-</div>
-<div class="pagetitle">
-	<h2>Contact</h2>
-</div>
-<div id="about-contact" class="text">
-	<form action="#" method="get">
-		<input type="text" placeholder="name" />
-		<br />
-		<input type="email" placeholder="e-mail" />
-		<textarea></textarea>
-		<input type="submit" value="Send" />
-	</form>
-</div>
-<div class="pagetitle">
-	<h2>Advertise</h2>
-</div>
-<div id="about-advertise" class="text">
+
+	<h3>Documentation</h3>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
+
+	<h3>Contact</h3>
+	<div id="about-contact" class="text">
+		<form action="#" method="get">
+			<input type="text" placeholder="name" />
+			<br />
+			<input type="email" placeholder="e-mail" />
+			<textarea></textarea>
+			<input type="submit" value="Send" />
+		</form>
+	</div>
 </div>
 {% endblock %}
